--- a/index.html
+++ b/index.html
@@ -21,14 +21,8 @@
         <br/>
 
         <div class="imgs">
-            <img src="public/tengawa.png"/>
+            <img src="https://lh5.googleusercontent.com/-nF2Mk2_cfng/UK8YGIqE0nI/AAAAAAAACRM/ked9Kd1v5aI/w650-h450-no/63470004.jpg"/>
         </div>
 
-        <br/>
-        <div class="bottom">
-            <img class="icon" src="public/fb_icon.png">
-            <img class="icon" src="public/yt_icon.png">
-            <img class="icon" src="public/ig_icon.png">
-        </div>
     </body>
 </html>
