--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </br>
                <h3>兩百字內的個人簡介。</h3>
                <p>目前我是即將合約期滿的中央主管機關的約聘公務人員，大學念農業、碩士研究教育領域，畢業先在民政機關後社政機關擔任公務人員，學經歷並非電機資訊相關領域。
-                因著攝影藝術的興趣跟網路工程建立微小的關聯，為了發表攝影作品在BLOGGER上面撰寫文章，下在公開的模板開始去解讀CSS程式碼，藉由修改參數著手修改設計網頁外觀，初步接觸前端網頁工程。
+                因著攝影藝術的興趣跟網路工程建立微小的關聯，為了發表攝影作品在BLOGGER上面撰寫文章，下載公開模板開始去解讀CSS程式碼，藉由修改參數著手修改設計網頁外觀，初步接觸前端網頁工程。
                 所有的技能都是以攝影為出發點，為了要閱讀國外的攝影刊物特別去學習日文，為了改造相機特別學習電路、機械、建模。
                 現在為了未來到境外工作的人生職涯規劃，對於自己擁有獨立學習的能力感到自信，學習職涯所必需的技能，踏入全端網站設計工程。
                </p>
@@ -73,21 +73,21 @@
                 </p>
             </br>
                 <h3>是否有想要加入的軟體公司？為什麼想加入該公司？</h3>
-                <p>參考網路上在Line Fukuoka(福岡)任職台灣工程師的心得在職涯的規劃中以前往日本為目標，該公司廣納來自歐美台灣的工程師，與菁英工程師共事琢磨技術，
+                <p>參考網路上在Line Fukuoka(福岡)任職台灣工程師的心得，在職涯的規劃中以前往日本為目標，該公司廣納來自歐美台灣的工程師，與菁英工程師共事琢磨技術，
                     在完成專案的同時與優秀人才精競自身的實力，這是令我期待事項之一。二來是公司的團隊文化，不像傳統日本公司上下明顯階級，主管與同事間齊心為共同目標開發軟體彼此協助。
                     構想如果在Line Fukuoka擔任工程師，與來自世界各地的菁英工程師為共同的專案一齊努力，除了在專業能力上有所精進，另一面也能與各路菁英結交友誼也令人期待。</p>
             </br>
                 <h3>請描述一件你曾經碰到最困難的事情，如何克服？</h3>
                 <p>改造底片相機。在傳統攝影中曾有款拍了馬上顯影的底片宣布停產，為了創作必須讓舊相機相容現行持續生產拍立得底片，
                 國外攝影論壇僅有幾張改造過程的照片，要開發出從未見過憑藉著想像的一台拍立得相機，即使再困難卻檔不住我對創作的渴望。
-                為此特別找尋基礎知識的學習資源，學習焊接電路、銑床技術、3D建模與列印，經過反覆不斷的嘗試與錯誤卻做出功能缺陷的瑕疵品，
-                每一次的失敗不斷積累經驗一步步拉近作出成品的距離，投注許多下班後業餘時間及周末假日，將傳統相機成功改造為拍立得相機。</p>
+                為此特別找尋基礎知識的學習資源，學習焊接電路、銑床技術、3D建模與列印，經過反覆不斷的嘗試與錯誤，做出功能缺陷的瑕疵品並不氣餒，
+                每一次的失敗不斷積累經驗一步步拉近作出成品的距離，再投注許多下班後業餘時間及周末假日，將傳統相機成功改造為拍立得相機。</p>
             </br>
                 <h3>關於這份申請網頁，請分享一個你開發時的技術心得。</h3>
                 <p>看完開放課程的影片之後，運用程式語法著手設計網頁外觀介面，是充滿著興奮跟滿心期待，並覺得能夠迅速地做出預期的介面。
-                    很迅速地撰寫CSS&HTML語法，滿心期待自己預想的介面可以立即呈現出來，結果是有許多效果沒有被呈現出來，遇到預期外的BUG。
+                    很迅速地撰寫CSS&HTML語法，滿心期待自己預想的介面可以立即呈現出來，結果是遇到預期外的BUG，有許多效果沒有運作。
                     立即打開W3Schools研究自己程式碼可能出錯的原因，還有可以寫出預期介面的方法，投注預期外更多時間去研究並除錯。
-                    後來將原有的程式碼做除錯，現在所見的頁面是最初預期想呈現的介面，體悟到實務經驗特別重要，有經驗可以迴避掉出錯的可能性。
+                    後來將原有的程式碼做除錯，現在所見的是最初預期想呈現的介面，體悟到實務經驗特別重要，有經驗可以迴避掉出錯的可能性。
                 </p>
             </br>
                 <h3>其他想要對我們說的事情？</h3>
