--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
     <!-- display="flex" 在banner切板內水平排列 -->
     <div class="outlink">
-        <img class="icon" src="public/fb_icon.png">
-        <img class="icon" src="public/yt_icon.png">
-        <img class="icon" src="public/ig_icon.png">
-        <img class="icon" src="public/tw_icon.png">
+        <img class="icon" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgVDSnjrjwpdixGPOgo-JPg-nI1WA0D984Iwfwp49lL3-2CT6zJMvCik5SVKajwXvwwp1HEBhtrch1wRhSN6ejJtNG4OzpsQ_FoGKbbuJzNfWgBP1BknnCNil3V1hm4Q17ACA7sIef1FbNBb7F-WyF0cmdgaOdqBIT7b7bZz_uQlFLxnH2wzu_vXRGM/s16000/fb_icon.png">
+        <img class="icon" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjCvWB1rbLhh29HGKlIOwG0M03NBLSVpnoDDp07ny5AObe7OhhdJB4zTfr-nnWAt5eK6Hhp49SQiDbuiBdvgDJC-AWJlytT01alME5fjEiUSzvHfihkIPpYRFwfll50Obx3Id2szsk5YHDZnfvK5_MZTIkaj4mJyWg5CpIXbqekZs8254QPwQv7NcM1/s1600/yt_icon.png">
+        <img class="icon" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjh8tQglCqWIhzr4WLrDY62WHHSpX3s85nqmUxW5C74JG_7dlqxlKRmmg9myZjFIcV7jh9DdNldCyTIMZRTDQSVU6Y57P9mqlhvptgQhGC7pgvVYfExWaTZpI5wzNIvmTqbjKX2QzKrX0Elqm6uSs4fmnITYQ7SqVNK0yzg3VbgsDKBREJOQG7QZXM-/s1600/ig_icon.png">
+        <img class="icon" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj56mCNqrukkA5r1th7cUG_Qq4eYyryHYfkC7inhTEzW2ccUU326sN17oNOwcMEb7p7XI3zXG1yajSblVvR2SwKYfFSnYgx6boPdE10GnVzpWP_Qi4ORxyp9ZK4LOzGZp0hSajTXbZpC96m_o8tSNORpPHThW2E4ggyKVOklK5TbuVM-eOf0OIVZDzK/s1600/tw_icon.png">
     </div> 
 
     <!-- 帶入ajax json替換語言; 靠右排列 -->
@@ -34,17 +34,17 @@
 
     <div class="profile">
         <div class="logo">
-            <img src="public/owllogo.png">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijZzUhohFBzgIEo8K94HGxXlKuWh8HmGre9NeDcsR2yyKt7V9cdlZyFmXSdv73Cxp_iJYqlSKEJRiE_zRr_GGzBSJnXP_qm_RVN0HES6-3IvL1wU0ws-QPPdxLddrQP5TEV-gxH5JWBfuRVy9p5zEwBuS9Dd8Ux0897iJij1uwf1SPNX6CwgRdz-CD/s324/owllogo.png">
         </div>
         <div class="name">
-            <img src="public/name.png">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh07SFrrlNmgMaJr4C3P-xfuuBaHvJB-rJmtDOmlza4MA372D2E62afIIii6ViFHHgbMMFjPNlG1XmGTJNeLXOWzQmRZJ1FLP0EQx1w4UgHtDRIxkxLDFzz8KrGMidR-pKaC6kS_GTFpF-UDN5Z0I64IeGOoi71F4iWG9m3OF5fpo_fTimGycQpGh6B/s650/name.png">
         </div>
     </div>
 
     <div class="subsite">
         <div class="pageslift">
             <div class="photo">
-                <img src="public/63480002.jpg">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh8ibXfDvDSUs05mIbo6LJizVd2IKs7r9PDTtfE9N4nvCHTCw6KoQpLlfxqQxvw15ERIZn32t60NxLtMABny0v0svndAI3llUwmGA3-oWWk3lc0BZleWuGqX02hpS38bp3ZzVDiQaGkKPLpddbHCWID279wgLOWQig5GI8yEOE1EAfMAQpumse0PJH0/s16000/63480002.JPG">
             </div>
             <div class="text">
                 <h1>BLOG</h1>
@@ -61,14 +61,14 @@
             </div>
             
             <div class="photor">
-                <img src="public/LEI06220.jpg">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj0cYGRvbByAnr94yOUxCONe3auNnJ7D1N4TXpxt9g5oHjbMRYHCKly1Jh8sG2OxQYb76fSTEVJPHbutFxPv99dgCrMCgQws0KohRMpc8wimk6S3vJ7QB4o7cvCQPLgAMq5mhq9GlNyRj6sOnQVBj9EPqTS2ebJyF0yISPk0uOvknxdFr8DGWeccof7/s640/LEI06220.jpg">
             </div>            
         </div>
 
 
         <div class="pageslift">
             <div class="photo">
-                <img src="public/LEI08720.jpg">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhoHXRTXsyizqyObEpdMyny8PrG-su_YAbGHZPUiJyi6ulPAOru0scGgCPLHllQHDfQ404liPaQkrMZ7w9NoSqnd2K46jjEskxC5Rebq6Jq_9zeIrusnhV6bUuIb9b6CGJzt4FL6WBx84MqKnKm86YgJhYjs3F7jnMUFYdX2Twsb480Mwb5ldaNyw0J/s640/LEI08720.jpg">
             </div>
             <div class="text">
                 <h1>Product</h1>
