--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 控制網頁縮放 版面寬度為裝置寬度，縮放比例為1x-->
 
-    <title>ColorKoala</title>
+    <title>Holyzuiko</title>
     <link rel="stylesheet" type="text/css" href="public/rwd-layout.css" />
     <!-- 從外部引入CSS -->
 
